--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Ravikachhadiya/shortify#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "nanoid": "^5.0.7",
